--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc",
-    "test": "mocha"
+    "test": "mocha",
+    "cover": "istanbul cover node_modules/mocha/bin/_mocha test/*.js -- -R spec"
   },
   "repository": {
     "type": "git",
@@ -23,11 +24,13 @@
     "@types/mocha": "^5.2.6",
     "@types/pluralize": "0.0.29",
     "chai": "^4.2.0",
+    "coveralls": "^3.0.2",
     "eslint": "^5.14.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-plugin-import": "^2.16.0",
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-react": "^7.12.4",
+    "istanbul": "^0.4.5",
     "mocha": "^5.2.0",
     "typescript": "^3.3.3"
   },
